--- a/views/embed.ejs
+++ b/views/embed.ejs
@@ -178,7 +178,6 @@
       const subtitlePosY = canvas.height * (1 - subtitleHeightRatio);
       const subtitleLineHeight = ctx.measureText("M").width * 1.75;
       const minDuration = 2000; // minimum required time to start playing the first video
-      const prefixUrl = "http://104.248.224.60:8080/"; // the URL to proxy which adds CORS headers to the proxied request
       const videoIds = []; // used to avoid using the same videos again
       const brokenVideoIds = []; // broken video IDs
       const progressBarWidthGap = 30; // progress bar has width of 100% - 30px
@@ -698,7 +697,7 @@
                 return;
               };
               printToConsole(`Loading video from ${segment.url}`);
-              segment.elem.src = `${prefixUrl}${segment.url}`;
+              segment.elem.src = segment.url;
             }
             if (segment.url.length) {
               loadVideo(segment);
