--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -147,6 +147,7 @@
   user-select: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none;
 }
 
 #main-form-button-viviify:hover {
@@ -223,6 +224,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-appearance: none;
 }
 
 #main-form-textarea-clear:hover {
