--- a/views/embed.ejs
+++ b/views/embed.ejs
@@ -9,6 +9,7 @@
   <meta name="viewport"
     content="user-scalable=no, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="icon" href="/asset/favicon/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/embed.css" />
 </head>
@@ -62,24 +63,24 @@
       <div id="controller-bottom">
         <div id="controller-bottom-left">
           <div id="controller-play" class="controller-elem">
-            <img id="controller-play-icon" class="controller-item" src="/asset/play.svg" alt="Play">
-            <img id="controller-pause-icon" class="controller-item" src="/asset/pause.svg" alt="Pause">
-            <img id="controller-replay-icon" class="controller-item" src="/asset/replay.svg" alt="Replay">
+            <img id="controller-play-icon" class="controller-item" src="/asset/image/play.svg" alt="Play">
+            <img id="controller-pause-icon" class="controller-item" src="/asset/image/pause.svg" alt="Pause">
+            <img id="controller-replay-icon" class="controller-item" src="/asset/image/replay.svg" alt="Replay">
           </div>
           <div id="controller-backward" class="controller-elem">
-            <img id="controller-backward-icon" class="controller-item" src="/asset/backward.svg" alt="Backward">
+            <img id="controller-backward-icon" class="controller-item" src="/asset/image/backward.svg" alt="Backward">
           </div>
           <div id="controller-forward" class="controller-elem">
-            <img id="controller-forward-icon" class="controller-item" src="/asset/backward.svg" alt="Forward">
+            <img id="controller-forward-icon" class="controller-item" src="/asset/image/backward.svg" alt="Forward">
           </div>
         </div>
         <div id="controller-bottom-right">
           <div id="controller-share" class="controller-elem">
-            <img id="controller-share-icon" class="controller-item" src="/asset/share.svg" alt="Share">
+            <img id="controller-share-icon" class="controller-item" src="/asset/image/share.svg" alt="Share">
           </div>
           <div id="controller-fullscreen" class="controller-elem">
-            <img id="controller-fullscreen-icon" class="controller-item" src="/asset/fullscreen.svg" alt="Fullscreen">
-            <img id="controller-normalscreen-icon" class="controller-item" src="/asset/normalscreen.svg"
+            <img id="controller-fullscreen-icon" class="controller-item" src="/asset/image/fullscreen.svg" alt="Fullscreen">
+            <img id="controller-normalscreen-icon" class="controller-item" src="/asset/image/normalscreen.svg"
               alt="Normalscreen">
           </div>
         </div>
