--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,6 +9,7 @@
   <meta name="viewport"
     content="user-scalable=no, width=device-width, initial-scale=1.0, minimum-scale=0.75, maximum-scale=0.75" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="icon" href="/asset/favicon/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/edit.css" />
 </head>
@@ -67,7 +68,7 @@
             <div id="main-form-viviify" class="main-form-sel-elem">
               <label for="viviify" class="main-form-sel-label">Viviify</label>
               <button id="main-form-button-viviify" class="main-form-sel-item">
-                <img id="main-form-play-icon" src="/asset/play.svg" alt="Play">
+                <img id="main-form-play-icon" src="/asset/image/play.svg" alt="Play">
               </button>
             </div>
           </div>
