--- a/views/error.ejs
+++ b/views/error.ejs
@@ -11,6 +11,7 @@
   <meta name="viewport"
     content="user-scalable=no, width=device-width, initial-scale=1.0, minimum-scale=0.75, maximum-scale=0.75" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="icon" href="/asset/favicon/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/error.css" />
 </head>
