--- a/views/watch.ejs
+++ b/views/watch.ejs
@@ -24,8 +24,7 @@
       </div>
     </header>
     <main id="main">
-      <iframe id="main-video-iframe" src="" frameborder="0" allow="autoplay;"
-        allowfullscreen></iframe>
+      <iframe id="main-video-iframe" src="" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
     </main>
   </div>
 
@@ -44,7 +43,6 @@
       iframe.focus(); // put focus on iframe so we can use its short cuts
     });
   </script>
-
 </body>
 
 </html>
