--- a/public/css/index.css
+++ b/public/css/index.css
@@ -36,7 +36,7 @@
 
 #header-right {
   margin-right: calc(65px / 3);
-  width: calc(100px * 3);
+  width: calc(100px * 1.7);
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -55,29 +55,78 @@
 #main {
   margin-top: 65px;
   width: 100%;
+  height: calc(100% - 65px);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
   background-color: rgb(246, 246, 246);
 }
 
 #main-headline {
   width: 100%;
-  height: calc(100vh - 65px);
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-#main-howitworks {
-  width: 100%;
-  height: calc(100vh - 65px - 65px);
+#main-text {
+  width: 50vw;
+  min-width: 420px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  color: rgb(68, 68, 68);
+}
+
+#main-video-iframe {
+  margin-top: calc(65px / 3);
+  width: 50vw;
+  height: calc(50vw * 0.5625);
+  min-width: 420px;
+  min-height: calc(420px * 0.5625);
+  box-shadow: none;
+  outline: none;
+  border-radius: 5px;
+  z-index: 3;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  background-color: rgb(0, 0, 0);
+}
+
+#main-get-started {
+  margin-top: calc(65px / 3);
+  width: 50vw;
+  height: 65px;
+  min-width: 420px;
+  border-radius: 5px;
+  box-shadow: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  border: 0;
+  background: rgb(49, 243, 202);
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+
+#main-get-started:hover {
+  background-color: rgb(39, 233, 192);
+}
+
+#main-get-started:active {
+  background-color: rgb(29, 223, 182);
 }
 
 /* ==================== footer ==================== */
