--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
         zenscroll.toY(0);
       });
       const iframe = document.getElementById("main-video-iframe");
-      iframe.contentWindow.location.replace("/embed/cf5f5idgX7f");
+      iframe.contentWindow.location.replace("/embed/67Q8ETwiiwW");
       iframe.focus(); // put focus on iframe so we can use its short cuts
       const getStarted = document.getElementById("main-get-started");
       getStarted.addEventListener("click", () => {
