--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
     </header>
     <main id="main">
       <div id="main-headline">
-        <h1 id="main-text">Convert text to video for more engaging learning experience</h1>
+        <h1 id="main-text">Convert text to video for a more engaging and comprehensive experience</h1>
         <iframe id="main-video-iframe" src="" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
         <button id="main-get-started">Get Started</button>
       </div>
