--- a/views/embed.ejs
+++ b/views/embed.ejs
@@ -185,6 +185,7 @@
       const videoIds = []; // used to avoid using the same videos again
       const brokenVideoIds = []; // broken video IDs
       const progressBarWidthGap = 30; // progress bar has width of 100% - 30px
+      const corsPrefix = "https://localhost:8080/";
       let state = null;
       let keywords = [];
       let segments = [];
@@ -745,7 +746,7 @@
                 return;
               };
               printToConsole(`Loading video from ${segment.url}`);
-              segment.elem.src = segment.url;
+              segment.elem.src = `${corsPrefix}${segment.url}`;
               segment.elem.load();
             }
             if (segment.url.length) {
