--- a/views/embed.ejs
+++ b/views/embed.ejs
@@ -185,7 +185,7 @@
       const videoIds = []; // used to avoid using the same videos again
       const brokenVideoIds = []; // broken video IDs
       const progressBarWidthGap = 30; // progress bar has width of 100% - 30px
-      const corsPrefix = "https://localhost:8080/";
+      const corsPrefix = "https://viviify.com:8080/";
       let state = null;
       let keywords = [];
       let segments = [];
