--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -194,6 +194,8 @@
           textArea.value = textArea.value.substr(0, maxNumCharacters);
         }
         updateCharsUsed();
+        viviify.style.backgroundColor = "rgb(175, 175, 175)";
+        viviify.style.pointerEvents = "none";
         saved.innerText = "Saving...";
         return true;
       }
@@ -201,8 +203,10 @@
       const showSaved = () => {
         saved.innerText = "Saved";
         window.setTimeout(() => {
+          viviify.style.backgroundColor = "rgb(49, 243, 202)";
+          viviify.style.pointerEvents = "auto";
           saved.innerText = "";
-        }, 1000);
+        }, 500);
       }
 
       const saveProject = () => {
@@ -232,6 +236,8 @@
           iframe.contentWindow.location.replace("/embed/<%= urlKey  %>?autoplay=1");
           iframe.focus(); // put focus on iframe so we can use its short cuts
         }).catch((error) => {
+          viviify.style.backgroundColor = "rgb(49, 243, 202)";
+          viviify.style.pointerEvents = "auto";
           saved.innerText = "";
           alert(error.message || error);
         });
@@ -240,6 +246,8 @@
       video.addEventListener("click", () => {
         video.style.opacity = 0;
         video.style.pointerEvents = "none";
+        // send message to child iframe
+        iframe.contentWindow.postMessage({ id: "SHOULD_SEND_VIDEO_DATA" }, "*");
       });
 
       video.addEventListener("transitionend", () => {
@@ -267,8 +275,41 @@
           saveProject().then((response) => {
             showSaved();
           }).catch((error) => {
+            viviify.style.backgroundColor = "rgb(49, 243, 202)";
+            viviify.style.pointerEvents = "auto";
             saved.innerText = "";
             alert(error.message || error);
+          });
+        }
+      });
+
+      // receive message from child iframe
+      const eventMethod = window.addEventListener ? "addEventListener" : "attachEvent";
+      const eventer = window[eventMethod];
+      const messageEvent = eventMethod === "attachEvent" ? "onmessage" : "message";
+      eventer(messageEvent, (event) => {
+        if (event.data.id === "SHOULD_UPDATE_SEGMENTS") {
+          if (saved.innerText.length) {
+            return false;
+          }
+          viviify.style.backgroundColor = "rgb(175, 175, 175)";
+          viviify.style.pointerEvents = "none";
+          saved.innerText = "Saving...";
+          // update project's segments with the segment's index, videos and videoIndex
+          fetch("/api/v1/project/<%= urlKey %>/segments", {
+            method: "PUT",
+            headers: { "Accept": "application/json", "Content-Type": "application/json" },
+            body: JSON.stringify({ videoData: event.data.videoData })
+          }).then(response => response.json()).then((data) => {
+            if (data.error) {
+              alert(data.message);
+              return;
+            }
+            if (!data.auth) {
+              alert(data.message);
+              return;
+            }
+            showSaved();
           });
         }
       });
