update example link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
         zenscroll.toY(0);
       });
       const iframe = document.getElementById("main-video-iframe");
-      iframe.contentWindow.location.replace("/embed/rwgTXEA9PAU");
+      iframe.contentWindow.location.replace("/embed/hTKxNJUrXLz");
       iframe.focus(); // put focus on iframe so we can use its short cuts
       const getStarted = document.getElementById("main-get-started");
       getStarted.addEventListener("click", () => {
